test/expected/include-too_many_files.out
cdecl> include "*"
               ^
9: error: *: too many files
